--- a/Layouts/src/sample/sample.fxml
+++ b/Layouts/src/sample/sample.fxml
@@ -4,26 +4,17 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<GridPane fx:controller="sample.Controller"
-          xmlns:fx="http://javafx.com/fxml" alignment="top_center" hgap="10" vgap="10"
-          gridLinesVisible="true"
+<?import javafx.scene.layout.HBox?>
+<HBox fx:controller="sample.Controller"
+      xmlns:fx="http://javafx.com/fxml" alignment="bottom_right"
+      style="-fx-border-color: red; -fx-border-width:3; -fx-border-style: dashed"
+      spacing="10"
 >
     <padding>
-        <Insets top="10"/>
+        <Insets bottom="10" right="10"/>
     </padding>
-<!--    <columnConstraints>-->
-<!--        <ColumnConstraints percentWidth="50.0"/>-->
-<!--        <ColumnConstraints percentWidth="50.0"/>-->
-<!--    </columnConstraints>-->
+    <Button text="ok"/>
+    <Button text="cancel"/>
+    <Button text="Help"/>
 
-    <Button text="Button One" GridPane.columnIndex="0" GridPane.rowIndex="0"
-            GridPane.halignment="RIGHT"
-    ></Button>
-    <Button text="Button Two" GridPane.columnIndex="0" GridPane.rowIndex="1"></Button>
-    <Button text="Button Three" GridPane.columnIndex="1" GridPane.rowIndex="0"></Button>
-    <Button text="really long Button four" GridPane.columnIndex="0" GridPane.rowIndex="3"
-        GridPane.columnSpan="2"
-    ></Button>
-    <Button text="Button five" GridPane.columnIndex="0" GridPane.rowIndex="2"></Button>
-
-</GridPane>
+</HBox>
